--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ html {
     border-bottom: 4px solid var(--cor-dourado);
     position: relative;
     z-index: 10;
-    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -790,6 +789,16 @@ html {
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 2px 8px var(--cor-sombra);
+}
+
+.mapa iframe {
+	width: 100%;
+	height: 300px;
+	display: block;
+	margin: 0 auto; /* Centraliza o mapa */
+	border: 2px solid var(--cor-dourado);
+	border-radius: 8px;
+	box-shadow: 0 2px 8px var(--cor-sombra);
 }
 
 /* ----- Validação do Formulário ----- */
